fixed the maven build issues