@@ -8,6 +8,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class BlogService {
@@ -64,6 +65,6 @@ public class BlogService {
         return blogPostRepository.findByPublishedTrueOrderByCreatedAtDesc()
                 .stream()
                 .limit(limit)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
